--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ html {
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background: linear-gradient(135deg, #1b2244 0%, #341652 100%);
     background-attachment: fixed;
     color: #333;
     overflow-x: hidden;
